src/objects/Build__c.object
<CustomObject>
    <fields>
        <fullName>Check_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This will only validate the code in the target organization.</inlineHelpText>
        <label>Check Only/Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TestClasses__c</fullName>
        <label>TestClasses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Options__c</fullName>
        <label>Test Options</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Run Local Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run All Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Specified Tests</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Build</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUILD-{0000}</displayFormat>
        <label>Build Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>